--- a/spec/cassettes/find_null_host.yml
+++ b/spec/cassettes/find_null_host.yml
@@ -2,35 +2,34 @@
 http_interactions:
 - request:
     method: get
-    uri: https://icinga2.example.net:5665/v1//objects/hosts?host=baz.example.net
+    uri: https://icinga2.example.net:5665/v1/objects/hosts?host=baz.example.net
     body:
       encoding: US-ASCII
       string: ''
     headers:
       Accept:
       - "*/*"
-      Accept-Encoding:
-      - gzip, deflate
       User-Agent:
-      - rest-client/2.0.2 (linux-gnu x86_64) ruby/2.4.2p198
+      - rest-client/2.1.0 (darwin22 arm64) ruby/3.2.2p53
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Host:
       - icinga2.example.net:5665
       Authorization:
-      - Basic cm9vdDpmb28=
+      - Basic foobar
   response:
     status:
       code: 404
       message: Not Found
     headers:
+      Server:
+      - Icinga/r2.14.0-1
       Content-Type:
       - application/json
-      Transfer-Encoding:
-      - chunked
-      Server:
-      - Icinga/r2.7.1-1
+      Content-Length:
+      - '42'
     body:
       encoding: UTF-8
-      string: '{"error":404.0,"status":"No objects found."}'
-    http_version: 
-  recorded_at: Tue, 26 Sep 2017 20:43:14 GMT
-recorded_with: VCR 3.0.3
+      string: '{"error":404,"status":"No objects found."}'
+  recorded_at: Mon, 23 Oct 2023 23:26:49 GMT
+recorded_with: VCR 6.2.0
