Fix Rubocop offenses

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -26,6 +26,12 @@ Style/RedundantBegin:
 Style/BlockDelimiters:
   AllowedPatterns: ['expect']
 
+Style/HashSyntax:
+  EnforcedShorthandSyntax: never
+
+Naming/BlockForwarding:
+  EnforcedStyle: explicit
+
 ##########
 # LAYOUT #
 ##########
