--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
           - '3.4'
           - '3.3'
           - '3.2'
-          - 'head'
+          # - 'head'
           - 'jruby'
           - 'truffleruby'
 
